1
    Checking aoc-rs v0.1.0 (/home/qther/dev/rs/aoc-rs)
    Checking aoc-rs v0.1.0 (/home/qther/dev/rs/aoc-rs)
error: expected `;`, found `out`
  --> src/helper/matrix.rs:50:64
   |
50 |                 let row: [T; COLUMNS] = row.try_into().unwrap()
   |                                                                ^ help: add `;` here
51 |                 out.extend();
   |                 --- unexpected token

error: expected `;`, found `out`
  --> src/helper/matrix.rs:50:64
   |
50 |                 let row: [T; COLUMNS] = row.try_into().unwrap()
   |                                                                ^ help: add `;` here
51 |                 out.extend();
   |                 --- unexpected token

error[E0277]: `T` doesn't implement `Debug`
    --> src/helper/matrix.rs:50:41
     |
50   |                 let row: [T; COLUMNS] = row.try_into().unwrap()
     |                                         ^^^^^^^^^^^^^^ ------ required by a bound introduced by this call
     |                                         |
     |                                         `T` cannot be formatted using `{:?}` because it doesn't implement `Debug`
     |
     = note: required for `Vec<T>` to implement `Debug`
note: required by a bound in `Result::<T, E>::unwrap`
    --> /home/qther/.rustup/toolchains/nightly-2022-10-15-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/result.rs:1109:12
     |
1109 |         E: fmt::Debug,
     |            ^^^^^^^^^^ required by this bound in `Result::<T, E>::unwrap`
help: consider further restricting type parameter `T`
     |
39   |     [(); ROWS * COLUMNS]:, T: std::fmt::Debug
     |                          ~~~~~~~~~~~~~~~~~~~~

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> src/helper/matrix.rs:51:21
   |
51 |                 out.extend();
   |                     ^^^^^^-- an argument of type `[T; COLUMNS]` is missing
   |
note: associated function defined here
  --> src/helper/matrix.rs:22:12
   |
22 |     pub fn extend(&mut self, row: [T; COLUMNS]) {
   |            ^^^^^^            -----------------
help: provide the argument
   |
51 |                 out.extend(/* [T; COLUMNS] */);
   |                           ~~~~~~~~~~~~~~~~~~~~

error[E0277]: `T` doesn't implement `Debug`
    --> src/helper/matrix.rs:50:41
     |
50   |                 let row: [T; COLUMNS] = row.try_into().unwrap()
     |                                         ^^^^^^^^^^^^^^ ------ required by a bound introduced by this call
     |                                         |
     |                                         `T` cannot be formatted using `{:?}` because it doesn't implement `Debug`
     |
     = note: required for `Vec<T>` to implement `Debug`
note: required by a bound in `Result::<T, E>::unwrap`
    --> /home/qther/.rustup/toolchains/nightly-2022-10-15-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/result.rs:1109:12
     |
1109 |         E: fmt::Debug,
     |            ^^^^^^^^^^ required by this bound in `Result::<T, E>::unwrap`
help: consider further restricting type parameter `T`
     |
39   |     [(); ROWS * COLUMNS]:, T: std::fmt::Debug
     |                          ~~~~~~~~~~~~~~~~~~~~

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> src/helper/matrix.rs:51:21
   |
51 |                 out.extend();
   |                     ^^^^^^-- an argument of type `[T; COLUMNS]` is missing
   |
note: associated function defined here
  --> src/helper/matrix.rs:22:12
   |
22 |     pub fn extend(&mut self, row: [T; COLUMNS]) {
   |            ^^^^^^            -----------------
help: provide the argument
   |
51 |                 out.extend(/* [T; COLUMNS] */);
   |                           ~~~~~~~~~~~~~~~~~~~~

Some errors have detailed explanations: E0061, E0277.
For more information about an error, try `rustc --explain E0061`.
Some errors have detailed explanations: E0061, E0277.
For more information about an error, try `rustc --explain E0061`.
error: error: could not compile `aoc-rs` due to 3 previous errors
could not compile `aoc-rs` due to 3 previous errors
